fix some issues (#751)
* fix some issues

* fix sonar

* move from lombok to record

* fix dist build

* add radius search

* fix sonar findings